Kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project-iot-ingress
spec:
  rules:
  - host: yourdomain.com
    http:
      paths:
      - path: /node-red
        pathType: Prefix
        backend:
          service:
            name: node-red-service
            port:
              number: 80
      - path: /mosquitto
        pathType: Prefix
        backend:
          service:
            name: mosquitto-service
            port:
              number: 1883
